# ssbt

./: .gitignore  README.md  __main__.py  engine.py  input.xlsx  pyproject.toml  requirements.txt  ssbt.yml
data/: customers.xlsx  orders.xlsx
models/: completed_orders.sql  enriched_orders.sql  raw_orders.sql  region_summary.sql  top_customers.sql
output/: completed_orders.xlsx  enriched_orders.xlsx  raw_orders.xlsx  region_summary.xlsx  top_customers.xlsx
